201004__ 1.1.0
* Localization for Dutch
  (thanks to Mirjam Bourke).
* Localization for French
  (thanks to Patrick Jayet and Jean-Baptiste Rouquier).
* Add a preference for restricting the search for card directories.
  (thanks to Jean-Baptiste Rouquier for the suggestion).
* Add a learn ahead feature.
  (thanks to Jean-Baptiste Rouquier for the request).

20100212 0.9.0
* Much more polished testing release.

20100117 0.5.0 / 0.5.1
* Initial proof-of-concept release.
