@@ -35,20 +35,20 @@ public final class R {
         public static final int card_webview=0x7f07001f;
         public static final int cards_left=0x7f070014;
         public static final int category=0x7f070013;
-        public static final int days_since_last_repetition=0x7f070032;
-        public static final int days_since_last_repetition_layout=0x7f070031;
-        public static final int days_until_next_repetition=0x7f070034;
-        public static final int days_until_next_repetition_layout=0x7f070033;
-        public static final int easiness=0x7f07002c;
-        public static final int easiness_layout=0x7f07002b;
-        public static final int grade=0x7f07002a;
+        public static final int days_since_last_repetition=0x7f070033;
+        public static final int days_since_last_repetition_layout=0x7f070032;
+        public static final int days_until_next_repetition=0x7f070035;
+        public static final int days_until_next_repetition_layout=0x7f070034;
+        public static final int easiness=0x7f07002d;
+        public static final int easiness_layout=0x7f07002c;
+        public static final int grade=0x7f07002b;
         public static final int grade0=0x7f070019;
         public static final int grade1=0x7f07001a;
         public static final int grade2=0x7f07001b;
         public static final int grade3=0x7f07001c;
         public static final int grade4=0x7f07001d;
         public static final int grade5=0x7f07001e;
-        public static final int grade_layout=0x7f070028;
+        public static final int grade_layout=0x7f070029;
         public static final int grading_buttons_bottom=0x7f070018;
         public static final int grading_buttons_left=0x7f07000d;
         public static final int grading_buttons_right=0x7f070010;
@@ -58,19 +58,20 @@ public final class R {
         public static final int key_grade3=0x7f070024;
         public static final int key_grade4=0x7f070025;
         public static final int key_grade5=0x7f070026;
+        public static final int key_replay_sounds=0x7f070027;
         public static final int key_show=0x7f070020;
-        public static final int label=0x7f070029;
+        public static final int label=0x7f07002a;
         public static final int label_author=0x7f070004;
         public static final int label_mnemosyne=0x7f070007;
         public static final int label_sm2=0x7f07000a;
-        public static final int lapses=0x7f070030;
-        public static final int lapses_layout=0x7f07002f;
+        public static final int lapses=0x7f070031;
+        public static final int lapses_layout=0x7f070030;
         public static final int layout_names=0x7f070002;
         public static final int layout_root=0x7f070000;
         public static final int logo=0x7f070001;
-        public static final int repetitions=0x7f07002e;
-        public static final int repetitions_layout=0x7f07002d;
-        public static final int schedule_table=0x7f070027;
+        public static final int repetitions=0x7f07002f;
+        public static final int repetitions_layout=0x7f07002e;
+        public static final int schedule_table=0x7f070028;
         public static final int show=0x7f070017;
         public static final int show_buttons_bottom=0x7f070016;
         public static final int show_buttons_left=0x7f07000e;
@@ -88,29 +89,29 @@ public final class R {
         public static final int stats=0x7f030004;
     }
     public static final class string {
-        public static final int about_author=0x7f050024;
-        public static final int about_author_label=0x7f050023;
-        public static final int about_mnemosyne=0x7f050026;
-        public static final int about_mnemosyne_label=0x7f050025;
-        public static final int about_sm2=0x7f050028;
-        public static final int about_sm2_label=0x7f050027;
+        public static final int about_author=0x7f050025;
+        public static final int about_author_label=0x7f050024;
+        public static final int about_mnemosyne=0x7f050027;
+        public static final int about_mnemosyne_label=0x7f050026;
+        public static final int about_sm2=0x7f050029;
+        public static final int about_sm2_label=0x7f050028;
         /**  translators: please do not translate below this line! 
  translators: please do not translate below this line! 
          */
-        public static final int app_name=0x7f050059;
-        public static final int cannot_find_card_dirs=0x7f05002f;
+        public static final int app_name=0x7f05005b;
+        public static final int cannot_find_card_dirs=0x7f050030;
         public static final int card_statistics=0x7f05000b;
         public static final int corrupt_card_dir=0x7f050013;
-        public static final int day_text=0x7f050019;
-        public static final int days_since_last_repetition=0x7f050020;
-        public static final int days_text=0x7f05001a;
-        public static final int days_until_next_repetition=0x7f050021;
-        public static final int easiness=0x7f05001c;
-        public static final int eula_accept=0x7f050042;
-        public static final int eula_refuse=0x7f050043;
-        public static final int eula_title=0x7f050041;
+        public static final int day_text=0x7f05001a;
+        public static final int days_since_last_repetition=0x7f050021;
+        public static final int days_text=0x7f05001b;
+        public static final int days_until_next_repetition=0x7f050022;
+        public static final int easiness=0x7f05001d;
+        public static final int eula_accept=0x7f050043;
+        public static final int eula_refuse=0x7f050044;
+        public static final int eula_title=0x7f050042;
         public static final int fatal_error=0x7f05000e;
-        public static final int grade=0x7f05001f;
+        public static final int grade=0x7f050020;
         /**   translators: please do not change the name="..." attributes! 
   translators: please do not change the name="..." attributes! 
          */
@@ -120,77 +121,79 @@ public final class R {
         public static final int grade3=0x7f050003;
         public static final int grade4=0x7f050004;
         public static final int grade5=0x7f050005;
-        public static final int in_text=0x7f050018;
-        public static final int info=0x7f050022;
-        public static final int key_grade0=0x7f05004f;
-        public static final int key_grade1=0x7f050050;
-        public static final int key_grade2=0x7f050051;
-        public static final int key_grade3=0x7f050052;
-        public static final int key_grade4=0x7f050053;
-        public static final int key_grade5=0x7f050054;
-        public static final int key_show=0x7f05004e;
-        public static final int lapses=0x7f05001e;
+        public static final int in_text=0x7f050019;
+        public static final int info=0x7f050023;
+        public static final int key_grade0=0x7f050050;
+        public static final int key_grade1=0x7f050051;
+        public static final int key_grade2=0x7f050052;
+        public static final int key_grade3=0x7f050053;
+        public static final int key_grade4=0x7f050054;
+        public static final int key_grade5=0x7f050055;
+        public static final int key_replay_sounds=0x7f050056;
+        public static final int key_show=0x7f05004f;
+        public static final int lapses=0x7f05001f;
         public static final int learn_ahead=0x7f050017;
-        public static final int loading_card_dir=0x7f05003e;
-        public static final int loading_cards=0x7f05003f;
-        public static final int market_description=0x7f05005a;
-        public static final int market_promo=0x7f05005b;
+        public static final int loading_card_dir=0x7f05003f;
+        public static final int loading_cards=0x7f050040;
+        public static final int market_description=0x7f05005c;
+        public static final int market_promo=0x7f05005d;
         public static final int no_card_dirs=0x7f050012;
         public static final int no_card_loaded_text=0x7f05000f;
         public static final int no_cards_left=0x7f050016;
-        public static final int no_cards_main=0x7f050029;
-        public static final int no_cards_step1=0x7f050049;
-        public static final int no_cards_step2=0x7f05004a;
+        public static final int no_cards_main=0x7f05002a;
+        public static final int no_cards_step1=0x7f05004a;
+        public static final int no_cards_step2=0x7f05004b;
         public static final int no_cards_title=0x7f050014;
         public static final int no_new_cards_title=0x7f050015;
-        public static final int not_available=0x7f05002a;
+        public static final int not_available=0x7f05002b;
         public static final int not_enough_memory_to_load=0x7f05000d;
         public static final int ok=0x7f050007;
-        public static final int repetitions=0x7f05001d;
+        public static final int repetitions=0x7f05001e;
+        public static final int replay_sounds=0x7f050018;
         public static final int schedule=0x7f050009;
-        public static final int searching_for_card_dirs=0x7f050040;
-        public static final int select_button_pos=0x7f050048;
+        public static final int searching_for_card_dirs=0x7f050041;
+        public static final int select_button_pos=0x7f050049;
         public static final int select_card_dir=0x7f05000c;
-        public static final int select_font_size=0x7f050039;
-        public static final int select_keys=0x7f05004d;
-        public static final int select_trade_off=0x7f050032;
-        public static final int setting_button_pos=0x7f050046;
-        public static final int setting_button_pos_summary=0x7f050047;
-        public static final int setting_card_dir=0x7f05002d;
-        public static final int setting_card_dir_summary=0x7f05002e;
-        public static final int setting_cards_to_load=0x7f050030;
-        public static final int setting_cards_to_load_summary=0x7f050031;
-        public static final int setting_cat_appearance=0x7f05002c;
-        public static final int setting_cat_operation=0x7f05002b;
-        public static final int setting_center=0x7f050033;
-        public static final int setting_center_summary=0x7f050034;
-        public static final int setting_font_size=0x7f050037;
-        public static final int setting_font_size_summary=0x7f050038;
+        public static final int select_font_size=0x7f05003a;
+        public static final int select_keys=0x7f05004e;
+        public static final int select_trade_off=0x7f050033;
+        public static final int setting_button_pos=0x7f050047;
+        public static final int setting_button_pos_summary=0x7f050048;
+        public static final int setting_card_dir=0x7f05002e;
+        public static final int setting_card_dir_summary=0x7f05002f;
+        public static final int setting_cards_to_load=0x7f050031;
+        public static final int setting_cards_to_load_summary=0x7f050032;
+        public static final int setting_cat_appearance=0x7f05002d;
+        public static final int setting_cat_operation=0x7f05002c;
+        public static final int setting_center=0x7f050034;
+        public static final int setting_center_summary=0x7f050035;
+        public static final int setting_font_size=0x7f050038;
+        public static final int setting_font_size_summary=0x7f050039;
         /**  TODO: - - - - - - - - - - - - - - - - - - -  
          */
-        public static final int setting_fullscreen_mode=0x7f05003a;
-        public static final int setting_fullscreen_mode_summary=0x7f05003b;
-        public static final int setting_keys=0x7f05004b;
-        public static final int setting_keys_summary=0x7f05004c;
+        public static final int setting_fullscreen_mode=0x7f05003b;
+        public static final int setting_fullscreen_mode_summary=0x7f05003c;
+        public static final int setting_keys=0x7f05004c;
+        public static final int setting_keys_summary=0x7f05004d;
         /**  TODO: translate 
          */
-        public static final int setting_restrict_search=0x7f050055;
-        public static final int setting_restrict_search_message=0x7f050058;
-        public static final int setting_restrict_search_summary=0x7f050056;
-        public static final int setting_restrict_search_title=0x7f050057;
-        public static final int setting_show_titlebar=0x7f05003c;
-        public static final int setting_show_titlebar_summary=0x7f05003d;
-        public static final int setting_touch_buttons=0x7f050035;
-        public static final int setting_touch_buttons_summary=0x7f050036;
+        public static final int setting_restrict_search=0x7f050057;
+        public static final int setting_restrict_search_message=0x7f05005a;
+        public static final int setting_restrict_search_summary=0x7f050058;
+        public static final int setting_restrict_search_title=0x7f050059;
+        public static final int setting_show_titlebar=0x7f05003d;
+        public static final int setting_show_titlebar_summary=0x7f05003e;
+        public static final int setting_touch_buttons=0x7f050036;
+        public static final int setting_touch_buttons_summary=0x7f050037;
         /**  TODO: new or changed 
  - - - - - - - - - - - - - - - - - - - - - - - 
          */
-        public static final int setting_two_grading_rows=0x7f050044;
-        public static final int setting_two_grading_rows_summary=0x7f050045;
+        public static final int setting_two_grading_rows=0x7f050045;
+        public static final int setting_two_grading_rows_summary=0x7f050046;
         public static final int settings=0x7f05000a;
         public static final int show=0x7f050006;
         public static final int skip_card=0x7f050008;
-        public static final int statistics=0x7f05001b;
+        public static final int statistics=0x7f05001c;
         public static final int update_overdue_text=0x7f050010;
         public static final int update_today_text=0x7f050011;
     }
