@@ -7,6 +7,7 @@
   (thanks to Jean-Baptiste Rouquier for the suggestion).
 * Add a learn ahead feature.
   (thanks to Jean-Baptiste Rouquier for the request).
+* Added support for sound.
 
 20100212 0.9.0
 * Much more polished testing release.
